Scheduled Posts UI fixes. Site font and line spacing changed

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -7,7 +7,7 @@
 }
 
 .italics {
-  font-family: "minion-pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "georgia", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: italic;
   font-weight: normal;
   text-decoration: none;
@@ -23,6 +23,10 @@
   border:none;
 }
 
+.ui-datepicker-calendar {
+  font-size: 80%;
+}
+
 .datepicker {
   margin-left: 6%;
   border: 1px solid #dddddd;
@@ -33,6 +37,7 @@
 .center-col {
   padding: 2%;
   background-color: #FFFFF0 !important; // ivory
+  padding-bottom: 20%;
 }
 
 .ui-datepicker-title {
@@ -50,7 +55,7 @@
 }
 
 .post-series {
-  font-family: "myriad-pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "verdana", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: italic;
   font-weight: 300;
   color: #999999;
@@ -210,7 +215,7 @@ table.table.table-condensed {
 }
 
 .ltag{
-    font-family: "myriad-pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "verdana", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 300;
     font-style: normal;
     list-style: none;
@@ -346,7 +351,7 @@ iframe {
 }
 
 .sidebar-links {
-  font-family: "myriad-pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "verdana", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
   font-style: normal;
 }
